# hw6-hmm-viterbi

./: HW_6 Testing.ipynb  README.md  pyproject.toml
docs/source/: conf.py  index.rst
src/models/: __init__.py  decoders.py  hmm.py
test/: test_project_deliverable.py  test_user_case.py
